# newsbase

./: .gitignore  Cargo.toml  Group.py  Server.py  requirements.txt
migrations/2022-04-18-190857_create_groups/: down.sql  up.sql
migrations/2022-04-20-103155_create_articles/: up.sql
migrations/2022-04-22-214529_add_newsgroup_last_high/: down.sql  up.sql
pycode/: get-headers.py
src/: gui_scratch.rs  lib.rs  main.rs  models.rs  nntp_scratch.rs  schema.rs  sqlite_main.rs
