[package]
name = "newsbase"
version = "0.0.1"
authors = ["Paul Walker <paul@solarwinter.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
nntp = "0.0.5"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
chrono = "0.4.19"
dotenv = "0.15.0"
substring = "1.4.5"